# SmoothBackfittingPy

./: CMakeLists.txt  SmoothBackfittingPy.cpp  SmoothBackfittingPy.pyx  Testfile.txt  sbf.pxd  setup.py
SmoothBackfittingCpp/: CMakeLists.txt
SmoothBackfittingCpp/examples/: example_1.cpp  example_3.cpp
SmoothBackfittingCpp/include/: partially_linear_SBF.h  smooth_backfitting_core.h
SmoothBackfittingCpp/tests/: additive_function_test.cpp  quantile_test.cpp  smooth_backfitting_core_test.cpp
SmoothBackfittingCpp2/: CMakeLists.txt  README.md
SmoothBackfittingCpp2/examples/: example_2.cpp
SmoothBackfittingCpp2/include/: smooth_backfitting_core.h
SmoothBackfittingCpp2/tests/: additive_function_test.cpp  sbf_lasso_test.cpp  smooth_backfitting_core_test.cpp
examples/: example_1.cpp  example_2.cpp  example_3.cpp
include/: additive_function.h  partially_linear_SBF.h  quantile.h  smooth_backfitting_core.h
include/utils/: quantile.h  random_generator.h
tests/: benchmarking.cpp  partially_linear_SBF_test.cpp  random_generator_test.cpp  smooth_backfitting_core_test.cpp
